Bugfix/etsl-593 fixed padding issues,alignment for green tag, ipad date view

--- a/ui.frontend/src/main/webpack/etisalat/styles/blogspot.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/blogspot.scss
@@ -37,7 +37,7 @@
         padding: toRem(5) toRem(10);
         text-transform: uppercase;
         border-radius: 0 0 toRem(4) toRem(4);
-        line-height: 1rem;
+        line-height: toRem(16);
         @include font-family-lato;
       }
       img{
@@ -164,7 +164,7 @@
     }
   }
   .tile-box-blogtile .tile-box-blogbody {
-    padding: 12px 12px 1rem 1rem;
+    padding: calc(#{$padding-step-1} + 4px) calc(#{$padding-step-1} + 4px) $padding-step-2 $padding-step-2;
     text-align: left;
 }
 }
